add: adding more projects

--- a/src/markdown/from-fundamentals-to-generative-ai-excellence.mdx
+++ b/src/markdown/from-fundamentals-to-generative-ai-excellence.mdx
@@ -1,10 +1,8 @@
 # 🌟 From Fundamentals to Generative AI
 
-## 🚀 Machine Learning Cohort at Bangkit Academy (Batch 2) 
-**Led by Google, Tokopedia, Gojek, and Traveloka**
+## 🚀 Machine Learning Cohort at Bangkit Academy (Batch 2) Led by Google, Tokopedia, Gojek, and Traveloka
 
-🗓️ **September 2024 - December 2024**
-
+![Bangkit Certificate](/bangkit.jfif)
 **Tags:** 🧠 Machine Learning, 🤖 Deep Learning, ✍️ NLP, 🌀 Generative AI, 🖼️ Computer Vision, 🛠️ TensorFlow
 
 ---
